<resources>
    <string name="app_name">Perez Reverse Killer</string>
    <string name="add_entry">Add files</string>
    <string name="save_file">Save</string>
    <string name="options">Options</string>
    <string name="folder_name">Folder name</string>
    <string name="add_folder">New folder</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="view">Open from system</string>
    <string name="sign_apk">Sign</string>
    <string name="fmt_code">Format code</string>
    <string name="del_exif">Delete EXIF info in image</string>
    <string name="gen_jni">Generate JNI header</string>
    <string name="signed_success">Signed successfully</string>
    <string name="signed_failed">Failed to sign!</string>
    <string name="extract">Unzip</string>
    <string name="extracting">Decompressing &#8230;</string>
    <string name="extracted">Unzipped</string>
    <string name="extract_all">Unzip all files</string>
    <string name="extract_path_empty">The decompression path is empty.</string>
    <string name="name_empty">The name is empty.</string>
    <string name="file_exists">The file \"%s\"already exists.</string>
    <string name="extract_path">Decompression path</string>
    <string name="rename">Rename</string>
    <string name="cannot_rename">Unable to rename \"%s\".</string>
    <string name="delete">Delete</string>
    <string name="is_delete">Do you want to delete %s?</string>
    <string name="deleted">%s has been deleted</string>
    <string name="copy">Copy</string>
    <string name="copy_to">Copy to clipboard:\n</string>
    <string name="copy_message">The file %s already exists. Do you want to overwrite it?</string>
    <string name="copy_failed">An error occurred while copying</string>
    <string name="copy_nothing">No file</string>
    <string name="copy_exist">Cannot copy to current directory</string>
    <string name="copied">Copied</string>
    <string name="over_write">Overwrite</string>
    <string name="cut">Cut</string>
    <string name="cut_to">Cut to clipboard:\n</string>
    <string name="paste">Paste</string>
    <string name="permission">Permission</string>
    <string name="file_browser">File browsing</string>
    <string name="directory_exists">The folder \" %s \" already exists.</string>
    <string name="directory_created">The folder \" %s \" has been created.</string>
    <string name="directory_cannot_create">Unable to create folder \" %s \".</string>
    <string name="directory_empty">Folder name is empty</string>
    <string name="action_exit">Exit</string>
    <string name="wait">Please wait&#8230;</string>
    <string name="dumpdex">Reinforced app dex unpack (BETA)</string>
    <string name="scan_qrcode">Scan QR Code</string>
    <string name="add_method">Add method</string>
    <string name="add_field">Add Domain</string>
    <string name="file_added">File added</string>
    <string name="save_elf">Save ELF</string>
    <string name="save_code">Save the code</string>
    <string name="save_dexfile">Save Dex</string>
    <string name="mass_dec_string">Batch decompile java and resource code</string>
    <string name="save_text">Save text</string>
    <string name="saved">Saved</string>
    <string name="method_editor">Method description</string>
    <string name="scan_tips">Align the QR code picture with the scan frame to automatically scan</string>
    <string name="remove_method">How to delete</string>
    <string name="remove_field">Delete domain</string>
    <string name="rename_class">Rename class</string>
    <string name="zip_editor_remove">Delete</string>
    <string name="zip_remove_progress">Deleting&#8230;</string>
    <string name="is_remove">Delete or not?</string>
    <string name="merger_dexfile">Merging Dex</string>
    <string name="remove_class">Delete class</string>
    <string name="write_zip">Writing &#8230;</string>
    <string name="load_data">Loading&#8230;</string>
    <string name="signed_zip">Signing &#8230;</string>
    <string name="string_pool">Character constant pool</string>
    <string name="replace_axml">Replace characters in xml</string>
    <string name="replace_src_view">Search for:</string>
    <string name="replace_dst_view">Replace with:</string>
    <string name="replace">Replace</string>
    <string name="replace_count">Number of replacements:</string>
    <string name="search_string">Search string</string>
    <string name="search_field">Search domain</string>
    <string name="search_method">Search method</string>
    <string name="search_name">First name:</string>
    <string name="search_descriptor">Type description:</string>
    <string name="search">Search for</string>
    <string name="search_class_name">Category:</string>
    <string name="search_name_empty">The search character is empty.</string>
    <string name="search_not_found">%s was not found.</string>
    <string name="str_jpg2png" translatable="false">JPG2PNG</string>
    <string name="str_png2jpg" translatable="false">PNG2JPG</string>
    <string name="img_conv_suc">Successfully converted the image(s).</string>
    <string name="img_conv_failed">Failed to convert the original image(s).</string>
    <string name="png_has_alpha">The given PNG file has an alpha channel. Forced conversion may result in the loss of the original background transparency. Do you still want to proceed with the conversion?</string>
    <string name="prefs_text">Text Editor</string>
    <string name="prompt">Prompt</string>
    <string name="is_save">Do you want to save it?</string>
    <string name="saving">Saving&#8230;</string>
    <string name="class_exists">Class name \" %s \" already exists.</string>
    <string name="line_wrap">Word wrap</string>
    <string name="line_wrap_summary">Wrap text when the text is too long</string>
    <string name="pref_title_settings">Settings</string>
    <string name="pref_category_display_sort">Display &amp; Sorting</string>
    <string name="pref_title_sort_by">Sort By</string>
    <string name="pref_summary_sort_by">Change the ordering criteria of files</string>
    <string name="pref_title_sort_reverse">Reverse Order</string>
    <string name="pref_summary_sort_reverse">Sort files in descending order</string>
    <string name="pref_category_file_operations">File Operations</string>
    <string name="pref_title_show_hidden">Show Hidden Files</string>
    <string name="pref_summary_show_hidden">Display files and folders starting with a dot</string>
    <string name="pref_title_confirm_delete">Confirm Before Delete</string>
    <string name="pref_summary_confirm_delete">Ask for confirmation before deleting any file</string>
    <string name="pref_category_advanced">Advanced</string>
    <string name="pref_title_enable_thumbnails">Enable Thumbnails</string>
    <string name="pref_summary_enable_thumbnails">Generate and cache image thumbnails</string>
    <string name="appearance">Edit interface</string>
    <string name="font_type">Font</string>
    <string name="font_type_summary">Choose font type</string>
    <string name="font_size">Font size</string>
    <string name="font_size_summary">Choose font size</string>
    <string name="font_color">Font color</string>
    <string name="font_color_summary">Choose font color</string>
    <string name="bg_color">Background color</string>
    <string name="bg_color_summary">Choose background color</string>
    <string name="zip_editor">Zip editor</string>
    <string name="text_editor">Text Editor</string>
    <string name="class_editor">Class editor</string>
    <string name="class_item">Class</string>
    <string name="search_class">Search results</string>
    <string name="field_list">Domain list</string>
    <string name="field_item_editor">Domain editing</string>
    <string name="field_item_new">New domain</string>
    <string name="method_list">Method list</string>
    <string name="code_editor">Code editing</string>
    <string name="method_item_editor">Method editing</string>
    <string name="method_item_new">New method</string>
    <string name="class_info_editor">Class editor</string>
    <string name="text_preferences">Text settings</string>
    <string name="about">About</string>
    <string name="replacing">Replacing&#8230;</string>
    <string name="searching">Searching&#8230;</string>
    <string name="from_start">From the beginning</string>
    <string name="choose_color">choose the color</string>
    <string name="ignore_name_descriptor">Ignore names and descriptors</string>
    <string name="ignore_descriptor">Ignore descriptor</string>
    <string name="extract_success">Successfully decompressed the archive!</string>
    <string name="failed_to_extract">Failed to decompress the archive!</string>
    <string name="rar_native_error">The module responsible for decompressing RAR crashed!</string>
    <string name="oat2dex_success">OAT to DEX success!</string>
    <string name="oat2dex_fail">OAT to DEX failed!</string>
    <string name="odex2dex_success">ODEX to DEX success!</string>
    <string name="odex2dex_fail">ODEX to DEX failed!</string>
    <string name="parse_elf_success">ELF file information DUMP succeeded!</string>
    <string name="parse_elf_fail">ELF file information DUMP failed!</string>
    <string name="elfeditor_label">ELF Editor</string>
    <string name="arsceditor_label">ARSC Editor</string>
    <string name="qrcscan_label">QRCode Scanner</string>
    <string name="audio_play">Play</string>
    <string name="audio_pause">Pause</string>
    <string name="audio_stop">Stop</string>
    <string name="audio_loop_on">Loop: On</string>
    <string name="audio_loop_off">Loop: Off</string>
    <string name="audio_unknown_artist">Unknown Artist</string>
    <string name="audio_unknown_album">Unknown Album</string>
    <string name="audio_stereo">Stereo</string>
    <string name="audio_mono">Mono</string>
    <string name="dex2jar_success">DEX2JAR succeeded!</string>
    <string name="dex2jar_fail">DEX2JAR failed!</string>
    <string name="tips">Prompt</string>
    <string name="axml_instruction">This is an android binary xml file, do you want to decompile or edit directly?</string>
    <string name="pref_category_apk_signing">APK Signing &amp; Optimization</string>
    <string name="pref_title_use_debug_keystore">Use Default Debug KeyStore</string>
    <string name="pref_summary_use_debug_keystore">Use built-in debug keystore for signing</string>
    <string name="pref_title_keystore_path">KeyStore File Path</string>
    <string name="pref_summary_keystore_path">Click to choose a custom keystore file</string>
    <string name="pref_title_keystore_alias">KeyStore Alias</string>
    <string name="pref_summary_keystore_alias">Alias name for key entry</string>
    <string name="pref_title_keystore_alias_password">Key Alias Password</string>
    <string name="pref_summary_keystore_alias_password">Password for key entry</string>
    <string name="pref_title_keystore_password">KeyStore Password</string>
    <string name="pref_summary_keystore_password">Password for keystore file</string>
    <string name="pref_category_signature_schemes">Signature Schemes</string>
    <string name="pref_title_sign_v1">V1 (JAR)</string>
    <string name="pref_summary_sign_v1">Standard JAR signature</string>
    <string name="pref_title_sign_v2">V2 (Full APK)</string>
    <string name="pref_summary_sign_v2">APK signature scheme v2 (Android 7.0+)</string>
    <string name="pref_title_sign_v3">V3 (Rotation)</string>
    <string name="pref_summary_sign_v3">APK signature scheme v3 (Android 9.0+)</string>
    <string name="pref_title_sign_v4">V4 (Inc. FS)</string>
    <string name="pref_summary_sign_v4">APK signature scheme v4 (Android 11.0+)</string>
    <string name="pref_title_enable_zipalign">Run ZipAlign</string>
    <string name="pref_summary_enable_zipalign">Optimize 4-byte boundaries for APK archive</string>
</resources>