<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_category_display_sort">
        <ListPreference
            android:key="pref_key_sort_by"
            android:title="@string/pref_title_sort_by"
            android:summary="%s"
            android:dialogTitle="@string/pref_title_sort_by"
            android:defaultValue="0"
            android:entries="@array/rank_criteria"
            android:entryValues="@array/rank_criteria_values" />

        <CheckBoxPreference
            android:key="pref_key_sort_reverse"
            android:title="@string/pref_title_sort_reverse"
            android:summary="@string/pref_summary_sort_reverse"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="pref_key_show_hidden"
            android:title="@string/pref_title_show_hidden"
            android:summary="@string/pref_summary_show_hidden"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_file_operations">
        <CheckBoxPreference
            android:key="pref_key_confirm_delete"
            android:title="@string/pref_title_confirm_delete"
            android:summary="@string/pref_summary_confirm_delete"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_advanced">
        <CheckBoxPreference
            android:key="pref_key_enable_thumbnails"
            android:title="@string/pref_title_enable_thumbnails"
            android:summary="@string/pref_summary_enable_thumbnails"
            android:defaultValue="true" />
    </PreferenceCategory>

</PreferenceScreen>